--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-.col-lg-3 {
-	width: 25%;
+body {
+	text-align: center;
 }
 
-.answerContent {
-	text-transform: uppercase;
+.description p {
+	font-size: 30px;
 }
