--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,42 @@
+html {
+	position: relative;
+	min-height: 100%;
+}
+
 body {
+	margin-bottom: 40px;
 	text-align: center;
 	background-image: url("../images/backgroundPattern.jpg");
 }
 
 .description p {
-	font-size: 30px;
+	font-size: 50px;
 }
 
 .bottomSection {
 	margin-bottom: 20px;
 }
+
+footer {
+	margin-top: 40px;
+	background-color: #eee;
+	height: 40px;
+}
+
+footer p {
+	margin-bottom: 0;
+	padding-top: 10px;
+}
+
+#answerContent {
+	font-size: 30px;
+}
+
+.middleSection .panel {
+	margin-top: 30px;
+}
+
+.container .jumbotron {
+	padding: 10px;
+}
+
