--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ footer p {
 	padding: 10px;
 }
 
-.image {
+#image {
     background-image: url(../images/hangmanImage.jpg);
     background-repeat: no-repeat, repeat;
     background-position: 0px 0px;
