--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,4 +49,20 @@ footer p {
 	margin: 0 auto;
 }
 
+.letters {
+	border: 2px black solid;
+	margin: 10px;
+	padding: 20px 20px 10px 20px;
+}
+
+.lettersCompleted {
+	border: 2px black solid;
+	margin: 10px;
+	padding: 20px 20px 10px 20px;
+}
+
+.wordGenerated {
+	padding: 30px 0 30px 0;
+}
+
 
